--- a/src/components/CommandLine/CommandLine.scss
+++ b/src/components/CommandLine/CommandLine.scss
@@ -21,6 +21,8 @@
     &__StageContainer {
         width: 100%;
         height: 200px;
+        padding: 12px;
+        line-height: 1.8;
     }
 
     @media screen and (max-width: $width-tablet) {
