--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -4,10 +4,10 @@ $width-tablet: 940px;
     display: flex;
     background: rgba(109, 124, 255, 0.07);
     margin-bottom: 50px;
-    translate: .15s all;
+    // translate: .15s all;
     position: relative;
     height: 200px;
-    transition: .5s;
+    transition: .5s box-shadow;
     box-shadow: none;
 
     &:hover {
