--- a/src/components/Projects/Project.scss
+++ b/src/components/Projects/Project.scss
@@ -22,6 +22,12 @@
         background: rgba(109, 124, 255, 0.07);
         flex-shrink: 0;
         margin-left: 44px;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
 
     &__ContentContainer {
