Move context link style to mixins

--- a/src/components/Projects/Project.scss
+++ b/src/components/Projects/Project.scss
@@ -117,7 +117,9 @@
     }
 
     &__Link {
+        @include contextLink;
         margin-right: 10px;
+        
 
         &::before {
             content: '';
