--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -101,3 +101,38 @@ $width-tablet: 940px;
         }
     }
 }
+
+
+@mixin contextLink {
+    display: inline-block;
+    margin-top: 10px;
+    
+    span {
+        position: relative;
+        display: inline-block;
+        transition: .3s transform;
+
+        &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            bottom: -3px;
+            left: 0;
+            width: 100%;
+            height: 0;
+            transition: .3s;
+            background: rgba(109, 124, 255, 0.2);
+            z-index: -1;
+        }
+    }
+
+    &:hover {
+        span {
+            transform: translateY(-2px);
+
+            &:before {
+                height: 10px;
+            }
+        }
+    }
+}
