--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -30,7 +30,7 @@ $width-tablet: 940px;
         img {
             width: 100%;
             height: 100%;
-            object-fit: contain;
+            object-fit: cover;
         }
     }
 
