--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -33,8 +33,14 @@ $width-tablet: 940px;
         }
     }
 
+    &__ContentWrapper {
+        width: 100%;
+    }
+
     &__ContentContainer {
         padding: 44px;
+        width: 100%;
+        word-wrap: break-word;
     }
 
     &__Title {
@@ -43,7 +49,7 @@ $width-tablet: 940px;
         font-size: 18px;
         font-style: normal;
         font-weight: 400;
-        line-height: normal;
+        line-height: 1.6;
         margin-bottom: 22px;
     }
 
@@ -66,37 +72,41 @@ $width-tablet: 940px;
         margin-bottom: 30px;
 
         &__ContentContainer {
-            padding: 34px;
+            padding: 32px 44px;
         }
 
         &__Description {
             font-size: 12px;
             line-height: 20px; 
-
-            -webkit-line-clamp: 4;
         }
     }
 
-    @media screen and ( max-width: 680px) {
+    @media screen and ( max-width: 580px) {
         flex-direction: column;
         height: auto;
-        width: calc(50% - 10px);
-
-        &:last-child {
-            margin-bottom: 30px;
-        }
+        width: 100%;
 
         &__ImageContainer {
             width: 100%;
             height: auto;
         }
-    }
-
-    @media screen and ( max-width: 500px) {
-        width: 100%;
 
         &:last-child {
             margin-bottom: 0;
+        }
+
+        &__Description {
+            -webkit-line-clamp: 8;
+        }
+    }
+
+    @media screen and ( max-width: 420px) {
+        &__Title {
+            margin-bottom: 16px;
+        }
+
+        &__ContentContainer {
+            padding: 26px;
         }
     }
 }
