--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -2,10 +2,18 @@
 
 .Team {
     &__TeammateList {
-        @media screen and ( min-width: 500px ) and ( max-width: 680px ) {
+        @mixin columnsView {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
+        }
+     
+        @media screen and ( min-width: 940px ) and ( max-width: 1200px ) {
+            @include columnsView;
+        }
+
+        @media screen and ( min-width: 500px ) and ( max-width: 720px ) {
+            @include columnsView;
         }
     }
 
