Add target blank attribute for services link Fix scroll of content container bug Fix text overflow in update section on mobile resolution Fix links in project info

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -22,7 +22,7 @@ body {
         width: 1460px;
         height: 1460px;
         background: rgba(0, 117, 255, 0.40);
-
+        z-index: -1;
         filter: blur(445.5px);
     }
     
