--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -50,7 +50,8 @@ $width-tablet: 940px;
         font-style: normal;
         font-weight: 400;
         line-height: 1.6;
-        margin-bottom: 22px;
+        // margin-bottom: 22px;
+        margin-bottom: 10px;
     }
 
     &__Description {
