--- a/src/components/Team/Teammate.scss
+++ b/src/components/Team/Teammate.scss
@@ -28,6 +28,13 @@
         display: inline-block;
     }
 
+    &__Gpg {
+        font-size: 8px;
+        margin-bottom: 14px;
+        line-height: 120%;
+        color: #A7A7A7;
+    }
+
     &__Username {
         display: inline-block;
         font-size: 14px;
@@ -115,7 +122,7 @@
         }
 
         &__Title {
-            margin-bottom: 14px;
+            margin-bottom: 10px;
         }
 
         &__Username {
