--- a/src/components/Projects/ProjectsList.scss
+++ b/src/components/Projects/ProjectsList.scss
@@ -1,4 +1,7 @@
 .ProjectsList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     @media screen and ( min-width: 500px ) and ( max-width: 680px ) {
         display: flex;
