--- a/src/components/Updates/Updates.scss
+++ b/src/components/Updates/Updates.scss
@@ -1,3 +1,8 @@
+@import '../../assets/styles/mixins.scss';
+
 .Devspace {
-    
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
