--- a/src/components/Registration/RegistrationWindow.scss
+++ b/src/components/Registration/RegistrationWindow.scss
@@ -21,4 +21,25 @@
         gap: 12px;
         align-items: center;
     }
+
+    &__CallToAction {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        font-weight: 400;
+        font-size: 12px;
+        color: #8fa0b6;
+        font-family: var(--font-mono);
+        
+        > a {
+            color: #97e8fc;
+            cursor: pointer;
+            opacity: 1;
+            transition: opacity .3s;
+
+            &:hover {
+                opacity: .7;
+            }
+        }
+    }
 }
