--- a/src/components/Registration/ImportWalletWindow.scss
+++ b/src/components/Registration/ImportWalletWindow.scss
@@ -8,5 +8,115 @@
     padding: 60px 100px;
     display: flex;
     flex-direction: column;
-    z-index: 10;
+    z-index: 11;
+    gap: 50px;
+
+    &__CloseButton {
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translate(-100%, 0%);
+        cursor: pointer;
+        height: 100%;
+        width: 64px;
+        background: rgba(45, 59, 75, 0.71);
+        font-family: "Press Start 2P";
+        display: flex;
+        justify-content: center;
+        padding-top: 24px;
+
+        &__Icon {
+            width: 16px;
+            height: 16px;
+        }
+
+        &::before {
+            content: '';
+            position: absolute;
+            height: 100%;
+            width: 0;
+            top: 0;
+            left: 0;
+            background: rgba(0, 117, 255, 0.10);
+            transition: .5s;
+        }
+
+        &:hover {
+            &:before {
+                animation-duration: .5s;
+                animation-name: slidein;
+            }
+        }
+    }
+
+    &__Title {
+        font-family: "Press Start 2P";
+        font-weight: 400;
+        font-size: 16px;
+        color: #000;
+    }
+
+    &__ButtonsContentSeedPhrase {
+        &::before {
+            transform: translateX(-100%) !important;
+        }
+    }
+
+    &__ButtonsContent {
+        position: relative;
+        display: flex;
+        align-items: center;
+        width: 100%;
+        background: #d2e8fe;
+
+        &::before {
+            content: '';
+            position: absolute;
+            right: 0;
+            top: 0;
+            width: 50%;
+            height: calc(100% - 2px);
+            background: #fff;
+            border: 1px solid #0051a4;
+            transform: translateX(0%);
+            transition: transform .3s ease-in-out;
+        }
+
+        &__Button {
+            font-family: "Press Start 2P";
+            font-weight: 400;
+            font-size: 10px;
+            color: #016dc4;
+            padding: 13px 16px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 50%;
+            cursor: pointer;
+            background-color: transparent;
+            z-index: 1;
+            transition: color .3s ease-in-out;
+        }
+    }
+}
+
+.Active {
+    color: #013984 !important;
+}
+
+@keyframes slidein {
+    from {
+        width: 0;
+        left: 0;
+    }
+
+    50% {
+        width: 100%;
+        left: 0;
+    }
+  
+    to {
+        width: 0;
+        left: 100%;
+    }
 }
