--- a/src/components/Registration/RegistrationForm.scss
+++ b/src/components/Registration/RegistrationForm.scss
@@ -41,7 +41,7 @@
             color: #01296d;
         }
 
-        > input {
+        > textarea {
             width: 100%;
             padding: 14px 0px;
             border-bottom: 1px solid #000;
@@ -50,6 +50,9 @@
             font-size: 18px;
             color: #0275ff;
             font-family: var(--font-mono);
+            resize: none;
+            max-height: 300px;
+            height: 50px;
 
             &::placeholder {
                 color: #000;
