--- a/src/components/Registration/RegistrationWindow.scss
+++ b/src/components/Registration/RegistrationWindow.scss
@@ -6,11 +6,83 @@
     padding: 40px;
     background: #131619;
     z-index: 3;
+    min-height: 166px;
+    display: flex;
+    align-items: center;
+
+    &__Loading {
+        position: relative;
+        width: 31px;
+        height: 31px;
+        flex-shrink: 0;
+    }
+
+    &__Connecting {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 120%;
+        color: #8fa0b6;
+        font-family: var(--font-mono);
+    }
 
     &__Container {
         display: flex;
         flex-direction: column;
         gap: 20px;
+    }
+
+    &__ContainerUser {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 10px;
+    }
+
+    &__InfoUser {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    &__Status {
+        position: absolute;
+        left: 0;
+        top: 0;
+        padding-left: 4px;
+        padding-right: 4px;
+
+        > p {
+            font-weight: 400;
+            font-size: 8px;
+            line-height: 200%;
+            letter-spacing: 0.06em;
+            color: #ecfacf;
+        }
+    }
+
+    &__LogOut {
+        cursor: pointer;
+        width: 36px;
+        height: 36px;
+        position: relative;
+        background-color: transparent;
+
+        > svg {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            color: #caf6fd;
+            transition: color .3s ease;
+        }
+
+        &:hover {
+            > svg {
+                color: #5199fc;
+            }
+        }
     }
 
     &__Title {
