--- a/src/components/UI/WalletSelection/WalletSelection.scss
+++ b/src/components/UI/WalletSelection/WalletSelection.scss
@@ -28,6 +28,10 @@
         color: #97e8fc;
         font-family: "Press Start 2P";
         transition: color 0.3s ease;
+        word-break: break-all;
+        line-height: 140%;
+        text-align: left;
+
     }
 
     > svg {
@@ -35,11 +39,12 @@
         height: 24px;
         color: #fff;
         transition: color 0.3s ease;
+        flex-shrink: 0;
     }
 
     &__Dropdown {
         position: absolute;
-        width: 100%;
+        width: 102%;
         bottom: calc(100% + 7px);
         right: 0;
         display: flex;
@@ -48,5 +53,16 @@
         padding: 17px;
         background: #131619;
         border: 1px solid #565656;
+        max-height: 375px;
+        overflow-y: auto;
+
+        > p {
+            cursor: pointer;
+            transition: color 0.3s ease;
+
+            &:hover {
+                color: #5199fc;
+            }
+        }
     }
 }
