--- a/src/components/Registration/ImportWalletWindow.scss
+++ b/src/components/Registration/ImportWalletWindow.scss
@@ -126,11 +126,38 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            line-height: 120%;
             width: 50%;
             cursor: pointer;
             background-color: transparent;
             z-index: 1;
             transition: color .3s ease-in-out;
+        }
+    }
+
+    @media screen and ( max-width: 1100px) {
+        width: 100vw;
+
+        &__CloseButton {
+            width: 100%;
+            height: 64px;
+            left: 100%;
+            padding-top: 0;
+            justify-content: flex-end;
+            align-items: center;
+            padding-right: 20px;
+            z-index: 2;
+        }
+
+        &__Wrapper {
+            padding: 40px;
+            padding-top: 80px;
+        }
+    }
+
+    @media screen and ( max-width: 520px) {
+        &__Wrapper {
+            gap: 30px;
         }
     }
 }
