--- a/src/components/Registration/RegistrationWindow.scss
+++ b/src/components/Registration/RegistrationWindow.scss
@@ -36,7 +36,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        gap: 10px;
+        gap: 30px;
     }
 
     &__InfoUser {
@@ -67,6 +67,7 @@
         height: 36px;
         position: relative;
         background-color: transparent;
+        flex-shrink: 0;
 
         > svg {
             position: absolute;
@@ -88,7 +89,10 @@
     &__Title {
         font-weight: 400;
         font-size: 16px;
+        line-height: 140%;
         color: #fff;
+        word-break: break-all;
+        text-align: left;
     }
 
     &__Buttons {
@@ -115,6 +119,39 @@
             &:hover {
                 opacity: .7;
             }
+        }
+    }
+
+    @media screen and ( max-width: 1100px) {
+        width: auto;
+        padding: 30px;
+
+        &__Title {
+            font-size: 14px;
+        }
+    }
+
+    @media screen and ( max-width: 768px) {
+        width: calc(100vw - 50px);
+        padding: 20px;
+
+        &__Title {
+            font-size: 12px;
+        }
+
+        &__Buttons {
+            flex-wrap: wrap;
+        }
+
+        &__CallToAction {
+            font-size: 10px;
+            flex-wrap: wrap;
+        }
+
+        &__ContainerUser {
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 10px;
         }
     }
 }
