--- a/src/components/UI/Button/RegistrationButton/RegistrationButton.scss
+++ b/src/components/UI/Button/RegistrationButton/RegistrationButton.scss
@@ -3,6 +3,7 @@
     padding: 13px 22px;
     font-weight: 400;
     font-size: 10px;
+    line-height: 120%;
     color: #d2e8fe;
     width: fit-content;
     font-family: "Press Start 2P";
@@ -17,7 +18,7 @@
     &.disabled {
         cursor: not-allowed;
         color: #caf6fd;
-        
+
         &::after {
             content: '';
             position: absolute;
