--- a/src/components/Registration/RegistrationWindow.scss
+++ b/src/components/Registration/RegistrationWindow.scss
@@ -23,6 +23,10 @@
         line-height: 120%;
         color: #8fa0b6;
         font-family: var(--font-mono);
+
+        &__Progress {
+            color: rgb(2, 117, 255);
+        }
     }
 
     &__Container {
