--- a/src/components/ContentBlock/ContentBlock.scss
+++ b/src/components/ContentBlock/ContentBlock.scss
@@ -10,14 +10,16 @@
     }
 
     &__ContentBlock {
-        padding: 50px;
-        border: 1px solid rgba(0, 117, 255, 0.35);
-        background: rgba(0, 117, 255, 0.01);
+        padding: 50px 40px;
+        padding-bottom: 36px;
+        background: #131619;
         backdrop-filter: blur(15px);
         height: 100%;
-        overflow-y: auto;
-        overflow-x: hidden;
-    
+
+        > * {
+            height: 100%;
+        }
+       
         &__Title {
             font-size: 24px;
         }
