--- a/src/components/Projects/ProjectsList.scss
+++ b/src/components/Projects/ProjectsList.scss
@@ -1,9 +1,34 @@
 .ProjectsList {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    height: 100%;
 
-    @media screen and ( min-width: 500px ) and ( max-width: 680px ) {
+    &__Header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 37px;
+        gap: 12px;
+        width: 100%;
+
+        > h2 {
+            font-weight: 400;
+            font-size: 16px;
+            color: #fff;
+            font-family: "Press Start 2P";
+            text-transform: uppercase;
+        }
+    }
+
+    > ul {
+        width: 100%;
+        overflow-y: auto;
+        overflow-x: hidden;
+        height: 100%;
+    }
+
+    @media screen and (min-width: 500px) and (max-width: 680px) {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
