--- a/src/components/PageEditingWindows/PageEditingWindows.scss
+++ b/src/components/PageEditingWindows/PageEditingWindows.scss
@@ -1,14 +1,16 @@
 @import '../../assets/styles/mixins.scss';
 
-.WrapperButton {
+.ProjectEditingWindow {
     position: relative;
-    padding: 0px 64px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
 
-    @media screen and ( max-width: 1024px ) {
-        padding: 0px 32px;
-    }
-
-    @media screen and ( max-width: 600px ) {
-        padding: 0px 16px;
+    > h2 {
+        font-weight: 400;
+        font-size: 16px;
+        color: #000;
+        font-family: 'Press Start 2P';
     }
 }
