--- a/src/components/UI/FileInput/FileInput.scss
+++ b/src/components/UI/FileInput/FileInput.scss
@@ -1,59 +1,22 @@
 @import '../../../assets/styles/mixins.scss';
 
 .FileInput {
-    position: relative;
     width: 100%;
+    background-color: #d2e8fe;
     display: flex;
-    flex-direction: column;
-    gap: 8px;
-
-    > p {
-        font-size: 18px;
-        color: #8F8F8F;
-
-        @media screen and ( max-width: 1024px ) {
-            font-size: 14px;
-        }
-
-        @media screen and ( max-width: 600px ) {
-            font-size: 10px;
-        }
-
-        > span {
-            color: #7D0000;
-        }
-    }
+    align-items: center;
 
     &__Error {
         border: 2px solid #fe5858 !important;
     }
 
-    &__Delete {
-        position: absolute;
-        z-index: 10;
-        padding: 3px;
-        border: 1px solid #fe5858;
-        color: #fe5858;
-        opacity: 1;
-        transition: opacity ease 0.5s;
-        cursor: pointer;
-        font-size: 12;
-        top: 5px;
-        right: 5px;
-
-        &:hover {
-            opacity: 0.7;
-        }
-    }
-
     &__Avatar {
         position: relative;
-        width: 200px;
-        height: 200px;
+        width: 100px;
+        height: 100px;
         overflow: hidden;
         cursor: pointer;
         flex-shrink: 0;
-        border: 1px solid #a09d9d;
 
         @media screen and ( max-width: 1024px ) {
             width: 150px;
@@ -74,6 +37,35 @@
             & img {
                 scale: 1.1;
             }
+        }
+    }
+
+    &__Info {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        width: 100%;
+        padding: 20px 16px 20px 30px;
+
+        &__Name {
+            font-weight: 400;
+            font-size: 16px;
+            color: #000;
+            font-family: 'Press Start 2P';
+        }
+
+        &__Link {
+            font-weight: 400;
+            font-size: 10px;
+            color: #008de4;
+            font-family: 'Press Start 2P';
+        }
+
+        &__Description {
+            font-weight: 400;
+            font-size: 12px;
+            color: #000;
+            font-family: 'Press Start 2P';
         }
     }
 }
