--- a/src/components/PageEditingWindows/PageEditingWindows.scss
+++ b/src/components/PageEditingWindows/PageEditingWindows.scss
@@ -6,11 +6,17 @@
     display: flex;
     flex-direction: column;
     gap: 50px;
+    padding: 60px 100px;
 
     > h2 {
         font-weight: 400;
         font-size: 16px;
         color: #000;
         font-family: 'Press Start 2P';
+    }
+
+    &__Button {
+        width: 100% !important;
+        background-color: #0275ff !important;
     }
 }
