--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -10,6 +10,7 @@ $width-tablet: 940px;
     transition: .5s box-shadow;
     box-shadow: none;
     padding: 20px;
+    padding-top: 40px;
 
     &:hover {
         cursor: pointer;
@@ -22,9 +23,33 @@ $width-tablet: 940px;
         margin-bottom: 0;
     }
 
+    &__Domain {
+        position: absolute;
+        top: 22px;
+        right: 22px;
+        font-weight: 400;
+        font-size: 10px;
+        text-align: right;
+        color: #62cff6;
+    }
+
+    &__PendingClaim {
+        position: absolute;
+        top: 2px;
+        left: 2px;
+        color: #fff7cd;
+        letter-spacing: 0.06em;
+        font-weight: 400;
+        font-size: 8px;
+        line-height: 200%;
+        font-family: 'Press Start 2P';
+        padding: 0px 4px;
+        background: #ffbd07;
+    }
+
     &__ImageContainer {
         width: 220px;
-        height: 100%;
+        height: 220px;
         background: rgba(109, 124, 255, 0.07);
         flex-shrink: 0;
 
@@ -173,7 +198,8 @@ $width-tablet: 940px;
     width: 100%;
     height: 100%;
     transition: .15s all;
-    background: rgba(109, 124, 255, 0.07); 
+    background: #131619;
+    padding: 48px 40px;
 
     &.hidden {
         opacity: 0;
