--- a/src/components/Projects/ProjectListItem.scss
+++ b/src/components/Projects/ProjectListItem.scss
@@ -7,10 +7,47 @@
         right: 14px;
         z-index: 10;
 
-        @media screen and ( max-width: 580px ) {
+        @media screen and (max-width: 580px) {
             background-color: rgba(0, 0, 0, 0.6);
         }
     }
-    
+
     @include listItem;
+}
+
+.ProjectListItemSkeleton {
+    position: relative;
+    width: 100%;
+    height: 270px;
+    background: #1a212a;
+    margin-bottom: 12px;
+    overflow: hidden;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: linear-gradient(90deg,
+                rgba(255, 255, 255, 0) 0%,
+                rgba(255, 255, 255, 0.02) 20%,
+                rgba(255, 255, 255, 0.05) 50%,
+                rgba(255, 255, 255, 0.02) 80%,
+                rgba(255, 255, 255, 0) 100%);
+        transform: translateX(-100%);
+        animation: shimmer 1.5s infinite;
+        will-change: transform;
+    }
+}
+
+@keyframes shimmer {
+    0% {
+        transform: translateX(-100%);
+    }
+
+    100% {
+        transform: translateX(100%);
+    }
 }
