--- a/src/components/UI/Loading/Loading.scss
+++ b/src/components/UI/Loading/Loading.scss
@@ -11,6 +11,36 @@
     animation: rotate 2s linear infinite;
 }
 
+.LoadingDots {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    text-align: center;
+    font-size: 24px;
+    color: #fff;
+
+    > span {
+        width: 5px;
+        height: 5px;
+        border-radius: 50%;
+        background-color: #fff;
+        animation: dots 1.5s infinite;
+    }
+
+    > :nth-child(1) {
+        animation-delay: 0s;
+    }
+
+    > :nth-child(2) {
+        animation-delay: 0.5s;
+    }
+
+    > :nth-child(3) {
+        animation-delay: 1s;
+    }
+}
+
 @keyframes rotate {
     from {
         transform: rotate(0deg);
@@ -19,3 +49,9 @@
         transform: rotate(360deg);
     }
 }
+
+@keyframes dots {
+    0% { opacity: 0; }
+    50% { opacity: 1; }
+    100% { opacity: 0; }
+  }
