--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -212,6 +212,7 @@ $width-tablet: 940px;
         gap: 32px;
         margin-bottom: 10px;
         width: 100%;
+        flex-wrap: wrap;
 
         &__NavButton {
             color: #fff;
@@ -270,6 +271,13 @@ $width-tablet: 940px;
                 font-weight: 400;
                 font-size: 16px;
                 color: #fff;
+                transition: .3s color;
+            }
+
+            &:hover {
+                > p {
+                    color: #4c9dff;
+                }
             }
         }
     }
@@ -306,6 +314,16 @@ $width-tablet: 940px;
         font-family: var(--font-mono);
         font-size: 18px;
         font-weight: 700;
+    }
+
+    @media screen and ( max-width: 1500px ) {
+        &__Navigation {
+            gap: 10px;
+
+            &__NavButton {
+                font-size: 10px;
+            }
+        }
     }
 
     @media screen and (max-width: $width-tablet) {
