--- a/src/components/Projects/Task.scss
+++ b/src/components/Projects/Task.scss
@@ -23,7 +23,8 @@
         display: flex;
         align-items: flex-end;
         justify-content: space-between;
-        gap: 12px;
+        gap: 20px;
+        flex-wrap: wrap;
     }
 
     &__OpenTaskButton {
@@ -93,5 +94,21 @@
         font-size: 10px;
         text-align: right;
         color: #62cff6;
+    }
+
+    @media screen and ( max-width: 700px ) {
+        padding: 40px 20px 10px 20px;
+
+        &__Content {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        &__Domain {
+            position: relative !important;
+            top: 0 !important;
+            right: 0 !important;
+            margin-bottom: 10px;
+        }
     }
 }
