Tried delete documents

--- a/src/components/PageEditingWindows/PageEditingWindows.scss
+++ b/src/components/PageEditingWindows/PageEditingWindows.scss
@@ -28,4 +28,9 @@
             }
         }
     }
+
+    &__ButtonDelete {
+        width: 100% !important;
+        background-color: #ff0000 !important;
+    }
 }
