--- a/src/components/ContentBlock/ContentBlock.scss
+++ b/src/components/ContentBlock/ContentBlock.scss
@@ -15,6 +15,7 @@
         background: #131619;
         backdrop-filter: blur(15px);
         height: 100%;
+        overflow-y: auto;
 
         > * {
             height: 100%;
