--- a/src/components/UI/FileInput/FileInput.scss
+++ b/src/components/UI/FileInput/FileInput.scss
@@ -67,5 +67,12 @@
             color: #000;
             font-family: 'Press Start 2P';
         }
+
+        &__MountedPicture {
+            font-weight: 400;
+            font-size: 10px;
+            color: #008de4;
+            font-family: 'Press Start 2P';
+        }
     }
 }
