--- a/src/components/UI/TextField/TextField.scss
+++ b/src/components/UI/TextField/TextField.scss
@@ -46,9 +46,10 @@
         font-size: 18px;
         color: #000;
         font-family: var(--font-mono);
-        resize: none;
+        resize: vertical;
         max-height: 300px;
         height: 50px;
+        min-height: 50px;
 
         &::placeholder {
             opacity: 0.3;
