--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -98,6 +98,9 @@ $width-tablet: 940px;
         font-size: 16px;
         color: #fff;
         margin-bottom: 16px;
+        word-break: break-all;  
+        overflow-wrap: break-word;
+        white-space: normal;
     }
 
     &__ButtonPendingClaims {
@@ -137,12 +140,13 @@ $width-tablet: 940px;
         font-size: 18px;
         max-width: 440px;
         font-style: normal;
-        font-weight: 700;
+        font-weight: 400;
         overflow: hidden;
         display: -webkit-box;
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 3;
-        white-space: pre-wrap;
+        white-space: pre-line;
+
     }
 
     @media screen and (max-width: 1500px) {
@@ -244,6 +248,7 @@ $width-tablet: 940px;
         gap: 20px;
         margin-bottom: 25px;
         width: 100%;
+        flex-wrap: wrap;
 
         &__Button {
             background-color: #ffbd07 !important;
@@ -317,7 +322,18 @@ $width-tablet: 940px;
         color: #fff;
         font-family: var(--font-mono);
         font-size: 18px;
-        font-weight: 700;
+        font-weight: 400;
+        white-space: pre-line;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        a {
+            text-decoration: underline;
+        }
     }
 
     @media screen and (max-width: 1500px) {
