--- a/src/components/UI/WrapperUserInputModal/WrapperUserInputModal.scss
+++ b/src/components/UI/WrapperUserInputModal/WrapperUserInputModal.scss
@@ -22,6 +22,7 @@
         display: flex;
         justify-content: center;
         padding-top: 24px;
+        z-index: 1;
 
         &__Icon {
             width: 16px;
@@ -44,6 +45,23 @@
                 animation-duration: .5s;
                 animation-name: slidein;
             }
+        }
+    }
+
+    @media screen and ( max-width: 960px) {
+        width: 100%;
+        
+        &__CloseButton {
+            transform: translate(0%, 0%);
+            width: 44px;
+            right: 0;
+            left: auto;
+            height: 40px;
+            width: 100%;
+            justify-content: flex-end;
+            align-items: center;
+            padding-top: 0px;
+            padding-right: 16px;
         }
     }
 }
