Fix projects validation

--- a/src/components/UI/TextField/TextField.scss
+++ b/src/components/UI/TextField/TextField.scss
@@ -32,9 +32,9 @@
         font-family: var(--font-mono);
         font-weight: 700;
         font-size: 14px;
-        color: #216206;
+        color: #620606;
         padding: 4px 8px;
-        background: #ecfacf;
+        background: #facfcf;
     }
 
     > textarea {
